<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">ContextGo</string>
  <string name="connect_title">Connect ContextGo</string>
  <string name="connect_description">ContextGo opens Official Remote by default. Use a custom WebUI host only when you want to connect directly to your own desktop or a self-hosted gateway.</string>
  <string name="official_remote_action">Use Official Remote</string>
  <string name="official_remote_detail">Open https://remote.contextgo.io/remote/devices</string>
  <string name="custom_host_title">Custom host</string>
  <string name="custom_host_description">Paste a base WebUI URL like http://192.168.1.10:3000 or a /qr-login?token=... link generated by ContextGo.</string>
  <string name="connect_hint">http://192.168.1.10:3000</string>
  <string name="connect_action">Open Custom Host</string>
  <string name="connect_notes">The app stores the last successful endpoint locally and reopens it next time.</string>
  <string name="invalid_url">Enter a valid http(s) ContextGo WebUI URL or a /qr-login link.</string>
  <string name="no_file_picker">No system file picker is available on this device.</string>
  <string name="no_directory_picker">No system directory picker is available on this device.</string>
  <string name="browser_loading_devices">Loading your device list…</string>
  <string name="browser_loading_desktop">Connecting to your desktop…</string>
  <string name="login_callback_failed">ContextGo sign-in could not be completed in the mobile shell.</string>
  <string name="login_failed">ContextGo sign-in could not be completed: %1$s</string>
  <string name="back_action">Back</string>
  <string name="reload_action">Reload</string>
  <string name="change_host_action">Change Host</string>
</resources>
